rust/nes/src/mapper/vrc7_audio/dsa_emu2413.rs

#[test]
fn bindgen_test_layout___OPLL_RateConv() {
    const UNINIT: ::std::mem::MaybeUninit<__OPLL_RateConv> = ::std::mem::MaybeUninit::uninit();
    let ptr = UNINIT.as_ptr();
    assert_eq!(
        ::std::mem::size_of::<__OPLL_RateConv>(),
        40usize,
        concat!("Size of: ", stringify!(__OPLL_RateConv))
    );
    assert_eq!(
        ::std::mem::align_of::<__OPLL_RateConv>(),
        8usize,
        concat!("Alignment of ", stringify!(__OPLL_RateConv))
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).ch) as usize - ptr as usize },
        0usize,
        concat!(
            "Offset of field: ",
            stringify!(__OPLL_RateConv),
            "::",
            stringify!(ch)
        )
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).timer) as usize - ptr as usize },
        8usize,
        concat!(
            "Offset of field: ",
            stringify!(__OPLL_RateConv),
            "::",
            stringify!(timer)
        )
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).f_ratio) as usize - ptr as usize },
        16usize,
        concat!(
            "Offset of field: ",
            stringify!(__OPLL_RateConv),
            "::",
            stringify!(f_ratio)
        )
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).sinc_table) as usize - ptr as usize },
        24usize,
        concat!(
            "Offset of field: ",
            stringify!(__OPLL_RateConv),
            "::",
            stringify!(sinc_table)
        )
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).buf) as usize - ptr as usize },
        32usize,
        concat!(
            "Offset of field: ",
            stringify!(__OPLL_RateConv),
            "::",
            stringify!(buf)
        )
    );
}
pub type OPLL_RateConv = __OPLL_RateConv;
extern "C" {
    pub fn OPLL_RateConv_new(
        f_inp: f64,
        f_out: f64,
        ch: ::std::os::raw::c_int,
    ) -> *mut OPLL_RateConv;
}
extern "C" {
    pub fn OPLL_RateConv_reset(conv: *mut OPLL_RateConv);
}
extern "C" {
    pub fn OPLL_RateConv_putData(conv: *mut OPLL_RateConv, ch: ::std::os::raw::c_int, data: i16);
}
extern "C" {
    pub fn OPLL_RateConv_getData(conv: *mut OPLL_RateConv, ch: ::std::os::raw::c_int) -> i16;
}
extern "C" {
    pub fn OPLL_RateConv_delete(conv: *mut OPLL_RateConv);
}
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct __OPLL {
    pub clk: u32,
    pub rate: u32,
    pub chip_type: u8,
    pub adr: u32,
    pub inp_step: f64,
    pub out_step: f64,
    pub out_time: f64,
    pub reg: [u8; 64usize],
    pub test_flag: u8,
    pub slot_key_status: u32,
    pub rhythm_mode: u8,
    pub eg_counter: u32,
    pub pm_phase: u32,
    pub am_phase: i32,
    pub lfo_am: u8,
    pub noise: u32,
    pub short_noise: u8,
    pub patch_number: [i32; 9usize],
    pub slot: [OPLL_SLOT; 18usize],
    pub patch: [OPLL_PATCH; 38usize],
    pub pan: [u8; 16usize],
    pub pan_fine: [[f32; 2usize]; 16usize],
    pub mask: u32,
    pub ch_out: [i16; 14usize],
    pub mix_out: [i16; 2usize],
    pub conv: *mut OPLL_RateConv,
}
#[test]
fn bindgen_test_layout___OPLL() {
    const UNINIT: ::std::mem::MaybeUninit<__OPLL> = ::std::mem::MaybeUninit::uninit();
    let ptr = UNINIT.as_ptr();
    assert_eq!(
        ::std::mem::size_of::<__OPLL>(),
        3640usize,
        concat!("Size of: ", stringify!(__OPLL))
    );
    assert_eq!(
        ::std::mem::align_of::<__OPLL>(),
        8usize,
        concat!("Alignment of ", stringify!(__OPLL))
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).clk) as usize - ptr as usize },
        0usize,
        concat!(
            "Offset of field: ",
            stringify!(__OPLL),
            "::",
            stringify!(clk)
        )
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).rate) as usize - ptr as usize },
        4usize,
        concat!(
            "Offset of field: ",
            stringify!(__OPLL),
            "::",
            stringify!(rate)
        )
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).chip_type) as usize - ptr as usize },
        8usize,
        concat!(
            "Offset of field: ",
            stringify!(__OPLL),
            "::",
            stringify!(chip_type)
        )
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).adr) as usize - ptr as usize },
        12usize,
        concat!(
            "Offset of field: ",
            stringify!(__OPLL),
            "::",
            stringify!(adr)
        )
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).inp_step) as usize - ptr as usize },
        16usize,
        concat!(
            "Offset of field: ",
            stringify!(__OPLL),
            "::",
            stringify!(inp_step)
        )
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).out_step) as usize - ptr as usize },
        24usize,
        concat!(
            "Offset of field: ",
            stringify!(__OPLL),
            "::",
            stringify!(out_step)
        )
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).out_time) as usize - ptr as usize },
        32usize,
        concat!(
            "Offset of field: ",
            stringify!(__OPLL),
            "::",
            stringify!(out_time)
        )
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).reg) as usize - ptr as usize },
        40usize,
        concat!(
            "Offset of field: ",
            stringify!(__OPLL),
            "::",
            stringify!(reg)
        )
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).test_flag) as usize - ptr as usize },
        104usize,
        concat!(
            "Offset of field: ",
            stringify!(__OPLL),
            "::",
            stringify!(test_flag)
        )
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).slot_key_status) as usize - ptr as usize },
        108usize,
        concat!(
            "Offset of field: ",
            stringify!(__OPLL),
            "::",
            stringify!(slot_key_status)
        )
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).rhythm_mode) as usize - ptr as usize },
        112usize,
        concat!(
            "Offset of field: ",
            stringify!(__OPLL),
            "::",
            stringify!(rhythm_mode)
        )
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).eg_counter) as usize - ptr as usize },
        116usize,
        concat!(
            "Offset of field: ",
            stringify!(__OPLL),
            "::",
            stringify!(eg_counter)
        )
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).pm_phase) as usize - ptr as usize },
        120usize,
        concat!(
            "Offset of field: ",
            stringify!(__OPLL),
            "::",
            stringify!(pm_phase)
        )
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).am_phase) as usize - ptr as usize },
        124usize,
        concat!(
            "Offset of field: ",
            stringify!(__OPLL),
            "::",
            stringify!(am_phase)
        )
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).lfo_am) as usize - ptr as usize },
        128usize,
        concat!(
            "Offset of field: ",
            stringify!(__OPLL),
            "::",
            stringify!(lfo_am)
        )
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).noise) as usize - ptr as usize },
        132usize,
        concat!(
            "Offset of field: ",
            stringify!(__OPLL),
            "::",
            stringify!(noise)
        )
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).short_noise) as usize - ptr as usize },
        136usize,
        concat!(
            "Offset of field: ",
            stringify!(__OPLL),
            "::",
            stringify!(short_noise)
        )
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).patch_number) as usize - ptr as usize },
        140usize,
        concat!(
            "Offset of field: ",
            stringify!(__OPLL),
            "::",
            stringify!(patch_number)
        )
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).slot) as usize - ptr as usize },
        176usize,
        concat!(
            "Offset of field: ",
            stringify!(__OPLL),
            "::",
            stringify!(slot)
        )
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).patch) as usize - ptr as usize },
        1472usize,
        concat!(
            "Offset of field: ",
            stringify!(__OPLL),
            "::",
            stringify!(patch)
        )
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).pan) as usize - ptr as usize },
        3448usize,
        concat!(
            "Offset of field: ",
            stringify!(__OPLL),
            "::",
            stringify!(pan)
        )
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).pan_fine) as usize - ptr as usize },
        3464usize,
        concat!(
            "Offset of field: ",
            stringify!(__OPLL),
            "::",
            stringify!(pan_fine)
        )
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).mask) as usize - ptr as usize },
        3592usize,
        concat!(
            "Offset of field: ",
            stringify!(__OPLL),
            "::",
            stringify!(mask)
        )
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).ch_out) as usize - ptr as usize },
        3596usize,
        concat!(
            "Offset of field: ",
            stringify!(__OPLL),
            "::",
            stringify!(ch_out)
        )
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).mix_out) as usize - ptr as usize },
        3624usize,
        concat!(
            "Offset of field: ",
            stringify!(__OPLL),
            "::",
            stringify!(mix_out)
        )
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).conv) as usize - ptr as usize },
        3632usize,
        concat!(
            "Offset of field: ",
            stringify!(__OPLL),
            "::",
            stringify!(conv)
        )
    );
}
pub type OPLL = __OPLL;
extern "C" {
    pub fn OPLL_new(clk: u32, rate: u32) -> *mut OPLL;
}
extern "C" {
    pub fn OPLL_delete(arg1: *mut OPLL);
}
extern "C" {
    pub fn OPLL_reset(arg1: *mut OPLL);
}
extern "C" {
    pub fn OPLL_resetPatch(arg1: *mut OPLL, arg2: u8);
}
extern "C" {
    #[doc = " Set output wave sampling rate.\n @param rate sampling rate. If clock / 72 (typically 49716 or 49715 at 3.58MHz) is set, the internal rate converter is\n disabled."]
    pub fn OPLL_setRate(opll: *mut OPLL, rate: u32);
}
extern "C" {
    #[doc = " Set internal calcuration quality. Currently no effects, just for compatibility.\n >= v1.0.0 always synthesizes internal output at clock/72 Hz."]
    pub fn OPLL_setQuality(opll: *mut OPLL, q: u8);
}
extern "C" {
    #[doc = " Set pan pot (extra function - not YM2413 chip feature)\n @param ch 0..8:tone 9:bd 10:hh 11:sd 12:tom 13:cym 14,15:reserved\n @param pan 0:mute 1:right 2:left 3:center\n ```\n pan: 76543210\n            |+- bit 1: enable Left output\n            +-- bit 0: enable Right output\n ```"]
    pub fn OPLL_setPan(opll: *mut OPLL, ch: u32, pan: u8);
}
extern "C" {
    #[doc = " Set fine-grained panning\n @param ch 0..8:tone 9:bd 10:hh 11:sd 12:tom 13:cym 14,15:reserved\n @param pan output strength of left/right channel.\n            pan[0]: left, pan[1]: right. pan[0]=pan[1]=1.0f for center."]
    pub fn OPLL_setPanFine(opll: *mut OPLL, ch: u32, pan: *mut f32);
}
